--- a/src/index.css
+++ b/src/index.css
@@ -11,18 +11,25 @@
     --black : hsl(0, 0%, 18%);
     --white : hsl(240, 100%, 99%);
 }
-html, body{
-    height: 100%;
-    width: 100%;
-    padding: 0;
-    margin: 0;
+html{
     font-family: 'Open Sans', sans-serif;
-    min-height: 100vh;
 }
 
-#root {
-    height: 100%;
-    width: 100%;
+body{
     padding: 0;
     margin: 0;
 }
+
+html, body, #root, .App {
+    height: 100%;
+}
+ #root {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1;
+}
+
